Fix - Tube control/tile overflow issue
I am unable to repro but tries to add some CSS/JS code so that it does
not appear on UI. Found another bug - pager control is not rebuilt with
page resize.

--- a/MvcWebRole1/Content/custom.css
+++ b/MvcWebRole1/Content/custom.css
@@ -145,7 +145,7 @@
 
 @media screen and (min-width: 901px) and (max-width: 1250px) {
     .movie-list ul li, .upcoming-movie-list ul li {
-        width: 30%;
+        width: 35%;
         max-width: 263px;
     }
 }
